--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "url": "https://github.com/clowwindy/shadowsocks-nodejs.git"
     },
     "devDependencies": {
-        "coffee-script": ">=1.6.2"
+        "coffee-script": ">=1.6.2",
+        "shadowsocks": ">=1.5.3"
     }
 }
