--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "clowwindy",
     "version": "1.5.3",
     "scripts": {
-        "start": "node ssserver"
+        "start": "/bin/ssserver"
     },
     "licenses": [{
         "type": "MIT",
